* Midi control stuff 1st pass.

--- a/src/app/oscillator/monophonic-oscillator/monophonic-oscillator-component.html
+++ b/src/app/oscillator/monophonic-oscillator/monophonic-oscillator-component.html
@@ -121,7 +121,7 @@
       </div>
     </div>
     <div class="module">
-      <h2>Freq Envelope</h2>
+      <h2>Freq&nbsp;Envelope</h2>
       <app-level-control #freqAttack
                          label="Attack"
                          [style]="dialStyle.yellow"
