--- a/src/app/filter/filter-component.html
+++ b/src/app/filter/filter-component.html
@@ -83,7 +83,7 @@
       </div>
     </div>
     <div class="module">
-      <h2>Freq Envelope</h2>
+      <h2>Freq&nbsp;Envelope</h2>
       <app-level-control #freqAttack
                          label="Attack"
                          [style]="dialStyle.yellow"
