--- a/src/app/oscillator/oscillator.component.html
+++ b/src/app/oscillator/oscillator.component.html
@@ -110,7 +110,7 @@
 
     </div>
     <div class="module">
-      <h2>Freq Envelope</h2>
+      <h2>Freq&nbsp;Envelope</h2>
       <app-level-control #freqAttack
                          label="Attack"
                          [style]="dialStyle.yellow"
