* Velocity sensitivity on/off controls.

--- a/src/app/oscillator/oscillator.component.html
+++ b/src/app/oscillator/oscillator.component.html
@@ -103,11 +103,16 @@
                          [divisions]="10"
                          [factor]="6"
                          (setLevel)="setReleaseTime($event)"></app-level-control>
+      <h4>Envelope</h4>
       <form #amplitudeEnvelopeOnOffForm>
         <label><input type="radio" name="envelope" value="on" checked><span>On</span></label>
         <label><input type="radio" name="envelope" value="off"><span>Off</span></label>
       </form>
-
+      <h4>Velocity Sens</h4>
+      <form #velocity>
+        <label><input type="radio" name="velocity" value="on" checked><span>On</span></label>
+        <label><input type="radio" name="velocity" value="off"><span>Off</span></label>
+      </form>
     </div>
     <div class="module">
       <h2>Freq&nbsp;Envelope</h2>
