--- a/src/app/noise/noise-component.html
+++ b/src/app/noise/noise-component.html
@@ -60,9 +60,15 @@
                            [factor]="10"
                            (setLevel)="setReleaseTime($event)">
         </app-level-control>
+        <h4>Envelope</h4>
         <form #amplitudeEnvelopeOnOffForm>
           <label><input type="radio" name="envelope" value="on"><span>On</span></label>
           <label><input type="radio" name="envelope" value="off" checked><span>Off</span></label>
+        </form>
+        <h4>Velocity Sens</h4>
+        <form #velocity>
+          <label><input type="radio" name="velocity" value="on" checked><span>On</span></label>
+          <label><input type="radio" name="velocity" value="off"><span>Off</span></label>
         </form>
       </div>
     </div>
