--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,10 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 .module {
-  > h2 {
+  > h2, h3, h4 {
     text-align: center;
     margin-bottom: 0;
     margin-top: 0;
+    font-family: sans-serif;
   }
   width: fit-content;
   height: fit-content;
@@ -57,6 +58,7 @@
     text-align: center;
     margin-bottom: 0;
     margin-top: 0;
+    font-family: sans-serif;
   }
   width: fit-content;
   height: fit-content;
@@ -164,7 +166,7 @@ input {
     -0.1em -0.2em 0 #ffffff7f inset;
   cursor: pointer;
   display: block;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.5em !important;
   width: 100%;
   height: 1em;
   transition: box-shadow var(--transDur) ease-in-out;
