--- a/src/app/synth/synth-component.html
+++ b/src/app/synth/synth-component.html
@@ -46,6 +46,7 @@
     <app-phasor #phasor
                 (output)="setPhasorOutputTarget($event)">
     </app-phasor>
+    <app-master-volume #masterVolume></app-master-volume>
   </div>
 </div>
 
