--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,4 @@
-<button (click)="start()">Start</button>
+<button (click)="mono()">Mono</button>
+&nbsp;
+<button (click)="poly()">Poly</button>
 <router-outlet />
