* Use router.navigate instead of window.location.href to go to routes to prevent complete reload of application each time. * Switching between polyphonic and monophonic. * various cleaning up in ngOnDestroy methods to facilitate switching between poly and mono.

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,2 @@
-<button (click)="mono()">Mono</button>
-&nbsp;
-<button (click)="poly()">Poly</button>
+<app-options [disappearOnMouseOut]="removeOptionsOnMouseOut" (synthType)="synthType($event)"></app-options>
 <router-outlet />
