* Frequency modulate on detune instead of frequency, as the latter had unequal modulation acro=ss the keyboard on monophonic mode.

--- a/src/app/filter/filter-component.html
+++ b/src/app/filter/filter-component.html
@@ -78,6 +78,7 @@
                            [divisions]="10"
                            [calAngle]="300"
                            [radius]="50"
+                           [factor]="300"
                            (setLevel)="setModLevel($event)"></app-level-control>
         <h2>Waveform</h2>
         <div style="height: 3px;"></div>
