--- a/src/app/oscillator/oscillator.component.html
+++ b/src/app/oscillator/oscillator.component.html
@@ -63,6 +63,7 @@
                            (setLevel)="setModFrequency($event)"></app-level-control>
         <app-level-control #modDepth label="Mod Depth" [style]="dialStyle.green" [divisions]="10" [calAngle]="300"
                            [radius]="50"
+                           [factor]="300"
                            (setLevel)="setModLevel($event)"></app-level-control>
         <h2>Waveform</h2>
         <div style="height: 3px;"></div>
