--- a/client/src/app/general/general.component.scss
+++ b/client/src/app/general/general.component.scss
@@ -37,6 +37,32 @@ button {
   margin-top: 4px;
 }
 
+button:active {
+  background: #AAA;
+  background: radial-gradient(circle,rgba(170, 170, 170, 1) 0%, rgba(204, 204, 204, 1) 50%, rgba(238, 238, 238, 1) 100%);
+  box-shadow:
+    0.1em 0 0 #272626af inset,
+    -0.1em 0 0 #272626 inset,
+    0 0.1em 0 #847a62 inset,
+    0 -0.1em 0 #ffffff3f,
+    0 0.1em 0 #ffffff7f,
+    0 -0.1em 0 #722257 inset,
+    -0.1em -0.2em 0 #ffffff7f inset;
+}
+
+button:disabled {
+  background: #AAA;
+  background: radial-gradient(circle,rgba(170, 170, 170, 1) 0%, rgba(204, 204, 204, 1) 50%, rgba(238, 238, 238, 1) 100%);
+  box-shadow:
+    0.1em 0 0 #272626af inset,
+    -0.1em 0 0 #272626 inset,
+    0 0.1em 0 #847a62 inset,
+    0 -0.1em 0 #ffffff3f,
+    0 0.1em 0 #ffffff7f,
+    0 -0.1em 0 #722257 inset,
+    -0.1em -0.2em 0 #ffffff7f inset;
+}
+
 .module {
   // Override justify-content in main .module definition
   justify-content: normal;
@@ -95,6 +121,15 @@ div.row {
     > div:first-child {
       > label {
         margin-right: 1em;
+        margin-top: 0.4em;
+        font-family: sans-serif;
+        font-size: 1.1em;
+      }
+      > input {
+        border: black solid 1px;
+        border-radius: 0.4em;
+        height: 2em;
+        padding-left: 0.4em;
       }
       white-space: nowrap;
       display: flex;
