--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -80,8 +80,9 @@
   --bg: #e3e4e8;
   --fg: #17181c;
   --transDur: 0.1s;
-  font-size: calc(20px + (40 - 20)*(100vw - 320px)/(2560 - 320));
-}
+ // font-size: calc(20px + (40 - 20)*(100vw - 320px)/(2560 - 320));
+  font-family: sans-serif;
+  }
 form {
   display: flex;
 }
@@ -171,7 +172,7 @@ input[type=radio], button {
   -webkit-appearance: none;
   appearance: none;
 }
-input[type=radio]:checked, button:active {
+input[type=radio]:checked {
   background-image: linear-gradient(#ffffff 33%,#414751 58%,#827a7b,#c0b6ac,#c3adaa);
   box-shadow:
     0.1em 0 0 #272626af inset,
@@ -262,6 +263,38 @@ input[type=radio] + span {
       0 0.1em 0 #0000007f,
       0 -0.1em 0 #722257 inset,
       -0.1em -0.2em 0 #ffffff7f inset;
+  }
+}
+select {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1em;
+  appearance: none;
+  -webkit-appearance: none;
+  background-size: 30%;
+  background-repeat: no-repeat;
+  background-position: right;
+  background-image: linear-gradient(#ffffff 33%,#414751 58%,#837b52,#c5baa1,#c3adaa);
+  background-color: #dcdcdc;
+  border-radius: 0.5em 0.5em 0.5em 0.5em;
+  border: none;
+  padding-left: 10px;
+  box-shadow:
+    0.1em 0 0 #2726267f inset,
+    -0.1em 0 0 #27262600 inset,
+    0 0.1em 0 #afa490 inset,
+    0 -0.1em 0 #ffffff3f,
+    0 0.2em 0.5em #0000007f,
+    0 -0.1em 0 #926086 inset,
+    -0.1em -0.2em 0 #ffffff7f inset;
+  cursor: pointer;
+  display: block;
+  padding-top: 0.2em;
+  height: 1.6em;
+
+  > option {
+    background-color: #dcdcdc;
   }
 }
 
