* Get deleted file name by name rather than the selector value.

--- a/client/src/app/general/general.component.html
+++ b/client/src/app/general/general.component.html
@@ -60,7 +60,7 @@
                   </h4>
                   <div>
                     <button (click)="_confirmRemoveConfig=false">Cancel</button>
-                    <button (click)="removeConfiguration(fileValueToDelete)">Confirm</button>
+                    <button (click)="removeConfiguration(fileToDelete)">Confirm</button>
                   </div>
                 }
               </div>
