* Prepare client side for saving and loading configurations (home button on synth takes you to the synth/config selector).

--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,2 +1,4 @@
-<app-options [disappearOnMouseOut]="removeOptionsOnMouseOut" (synthType)="synthType($event)"></app-options>
+<div class="options">
+  <app-options (synthType)="synthType($event)"></app-options>
+</div>
 <router-outlet />
