--- a/client/src/app/synth/synth-component.html
+++ b/client/src/app/synth/synth-component.html
@@ -1,4 +1,7 @@
 <div #synth>
+  <div class="home-button">
+    <button class="material-icons" (click)="showHomeForm()">home</button>
+  </div>
   <div style="display: flex; flex-direction: row">
     <app-oscillators #oscillators
                      [filters]="filters"
