--- a/client/src/app/options/options-component.scss
+++ b/client/src/app/options/options-component.scss
@@ -1,5 +1,16 @@
 div.options {
-  position: absolute;
-  max-width: 250px;
-  z-index: 2;
+  > div {
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    > h2:last-of-type {
+      margin-top: 30px;
+    }
+    > select {
+      background-size: 10%;
+      width: 400px;
+    }
+  }
+  max-width: 480px;
+  z-index: -1;
 }
