--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -298,4 +298,55 @@ select {
   }
 }
 
+button {
+  background-image: linear-gradient(
+      90deg,
+      #999 5%,
+      #fff 10%,
+      #ccc 30%,
+      #ddd 50%,
+      #ccc 70%,
+      #fff 80%,
+      #999 95%,
+      #444 100%
+  );
+
+  border-radius: 0.5em 0.5em 0.5em 0.5em;
+  width: 12em;
+  height: 1.5em;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 4px;
+}
+
+button:active {
+  background: #AAA;
+  background: radial-gradient(circle,rgba(170, 170, 170, 1) 0%, rgba(204, 204, 204, 1) 50%, rgba(238, 238, 238, 1) 100%);
+  box-shadow:
+    0.1em 0 0 #272626af inset,
+    -0.1em 0 0 #272626 inset,
+    0 0.1em 0 #847a62 inset,
+    0 -0.1em 0 #ffffff3f,
+    0 0.1em 0 #ffffff7f,
+    0 -0.1em 0 #722257 inset,
+    -0.1em -0.2em 0 #ffffff7f inset;
+  padding-top: 3px;
+  padding-left: 3px;
+
+}
+
+button:disabled {
+  background: #AAA;
+  background: radial-gradient(circle,rgba(170, 170, 170, 1) 0%, rgba(204, 204, 204, 1) 50%, rgba(238, 238, 238, 1) 100%);
+  box-shadow:
+    0.1em 0 0 #272626af inset,
+    -0.1em 0 0 #272626 inset,
+    0 0.1em 0 #847a62 inset,
+    0 -0.1em 0 #ffffff3f,
+    0 0.1em 0 #ffffff7f,
+    0 -0.1em 0 #722257 inset,
+    -0.1em -0.2em 0 #ffffff7f inset;
+}
+
+
 
