--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -7,6 +7,7 @@
     margin-top: 0;
     font-family: sans-serif;
   }
+
   width: fit-content;
   height: fit-content;
   display: flex;
@@ -17,6 +18,7 @@
   border-radius: 10px;
   margin: 3px !important;
 }
+
 .column {
   display: flex;
   flex-direction: column;
@@ -51,17 +53,19 @@
 }
 
 .group-container {
-  > h1,h2 {
+  > h1, h2 {
     text-align: center;
     margin-bottom: 0;
     margin-top: 0;
     font-family: sans-serif;
   }
+
   width: fit-content;
   height: fit-content;
   border: solid 2px black;
   border-radius: 10px;
 }
+
 .group {
   width: fit-content;
   height: fit-content;
@@ -76,30 +80,35 @@
   margin: 0;
   padding: 0;
 }
+
 :root {
   --bg: #e3e4e8;
   --fg: #17181c;
   --transDur: 0.1s;
- // font-size: calc(20px + (40 - 20)*(100vw - 320px)/(2560 - 320));
+  // font-size: calc(20px + (40 - 20)*(100vw - 320px)/(2560 - 320));
   font-family: sans-serif;
-  }
+}
+
 form {
   display: flex;
 }
 
 body {
   background-color: var(--bg);
- // background-image: linear-gradient(90deg,#0000003f,transparent);
- // height: 100vh;
+  // background-image: linear-gradient(90deg,#0000003f,transparent);
+  // height: 100vh;
 }
+
 form, label {
   width: 100%;
 }
+
 form {
   margin: auto;
   max-width: 24em;
   padding: 0 1.5em;
 }
+
 label {
   display: block;
   text-align: center;
@@ -108,61 +117,60 @@ label {
 
 label:first-child input[type=radio] {
   border-radius: 0.5em 0 0 0.5em;
-  box-shadow:
-    0.1em 0 0 #2726267f inset,
-    -0.1em 0 0 #27262600 inset,
-    0 0.1em 0 #afa490 inset,
-    0 -0.1em 0 #ffffff3f,
-    0 0.2em 0.5em #0000007f,
-    0 -0.1em 0 #926086 inset,
-    -0.1em -0.2em 0 #ffffff7f inset,
-    0.2em 0 0 #ffffff7f inset;
+  box-shadow: 0.1em 0 0 #2726267f inset,
+  -0.1em 0 0 #27262600 inset,
+  0 0.1em 0 #afa490 inset,
+  0 -0.1em 0 #ffffff3f,
+  0 0.2em 0.5em #0000007f,
+  0 -0.1em 0 #926086 inset,
+  -0.1em -0.2em 0 #ffffff7f inset,
+  0.2em 0 0 #ffffff7f inset;
 }
+
 label:last-child input[type=radio] {
   border-radius: 0 0.5em 0.5em 0;
-  box-shadow:
-    0 -0.1em 0 #926086 inset,
-    0.1em 0 0 #2726267f inset,
-    -0.1em 0 0 #2726267f inset,
-    0 0.1em 0 #afa490 inset,
-    -0.1em 0 0 #afa490 inset,
-    0 -0.1em 0 #ffffff3f,
-    0 0.2em 0.5em #0000007f,
-    -0.1em -0.1em 0 0.1em #ffffff7f inset;
+  box-shadow: 0 -0.1em 0 #926086 inset,
+  0.1em 0 0 #2726267f inset,
+  -0.1em 0 0 #2726267f inset,
+  0 0.1em 0 #afa490 inset,
+  -0.1em 0 0 #afa490 inset,
+  0 -0.1em 0 #ffffff3f,
+  0 0.2em 0.5em #0000007f,
+  -0.1em -0.1em 0 0.1em #ffffff7f inset;
 }
+
 label:first-child input[type=radio]:checked {
-  box-shadow:
-    0.1em 0 0 #272626af inset,
-    -0.1em 0 0 #272626 inset,
-    0 0.1em 0 #847a62 inset,
-    0 -0.1em 0 #ffffff3f,
-    0 0.1em 0 #ffffff7f,
-    0 -0.1em 0 #722257 inset,
-    -0.1em -0.2em 0 #ffffff7f inset,
-    0.2em 0 0 #ffffff7f inset;
+  box-shadow: 0.1em 0 0 #272626af inset,
+  -0.1em 0 0 #272626 inset,
+  0 0.1em 0 #847a62 inset,
+  0 -0.1em 0 #ffffff3f,
+  0 0.1em 0 #ffffff7f,
+  0 -0.1em 0 #722257 inset,
+  -0.1em -0.2em 0 #ffffff7f inset,
+  0.2em 0 0 #ffffff7f inset;
 }
+
 label:last-child input[type=radio]:checked {
-  box-shadow:
-    0.1em 0 0 #272626af inset,
-    -0.1em 0 0 #272626 inset,
-    0 -0.1em 0 #722257 inset,
-    0 0.1em 0 #847a62 inset,
-    -0.1em 0 0 #847a62 inset,
-    0 -0.1em 0 #ffffff3f,
-    0 0.1em 0 #ffffff7f,
-    -0.1em -0.1em 0 0.1em #ffffff7f inset;
+  box-shadow: 0.1em 0 0 #272626af inset,
+  -0.1em 0 0 #272626 inset,
+  0 -0.1em 0 #722257 inset,
+  0 0.1em 0 #847a62 inset,
+  -0.1em 0 0 #847a62 inset,
+  0 -0.1em 0 #ffffff3f,
+  0 0.1em 0 #ffffff7f,
+  -0.1em -0.1em 0 0.1em #ffffff7f inset;
 }
+
 input[type=radio], button {
-  background-image: linear-gradient(#ffffff 33%,#414751 58%,#837b52,#c5baa1,#c3adaa);
+  background-image: linear-gradient(#ffffff 33%, #414751 58%, #837b52, #c5baa1, #c3adaa);
   border-radius: 0;
-  box-shadow:
-    0.1em 0 0 #2726267f inset,
-    -0.1em 0 0 #27262600 inset,
-    0 0.1em 0 #afa490 inset,
-    0 -0.1em 0 #ffffff3f,
-    0 0.2em 0.5em #0000007f,
-    0 -0.1em 0 #926086 inset,
-    -0.1em -0.2em 0 #ffffff7f inset;
+  box-shadow: 0.1em 0 0 #2726267f inset,
+  -0.1em 0 0 #27262600 inset,
+  0 0.1em 0 #afa490 inset,
+  0 -0.1em 0 #ffffff3f,
+  0 0.2em 0.5em #0000007f,
+  0 -0.1em 0 #926086 inset,
+  -0.1em -0.2em 0 #ffffff7f inset;
   cursor: pointer;
   display: block;
   margin-bottom: 0.5em !important;
@@ -172,23 +180,26 @@ input[type=radio], button {
   -webkit-appearance: none;
   appearance: none;
 }
+
 input[type=radio]:checked {
-  background-image: linear-gradient(#ffffff 33%,#414751 58%,#827a7b,#c0b6ac,#c3adaa);
-  box-shadow:
-    0.1em 0 0 #272626af inset,
-    -0.1em 0 0 #272626 inset,
-    0 0.1em 0 #847a62 inset,
-    0 -0.1em 0 #ffffff3f,
-    0 0.1em 0 #ffffff7f,
-    0 -0.1em 0 #722257 inset,
-    -0.1em -0.2em 0 #ffffff7f inset;
+  background-image: linear-gradient(#ffffff 33%, #414751 58%, #827a7b, #c0b6ac, #c3adaa);
+  box-shadow: 0.1em 0 0 #272626af inset,
+  -0.1em 0 0 #272626 inset,
+  0 0.1em 0 #847a62 inset,
+  0 -0.1em 0 #ffffff3f,
+  0 0.1em 0 #ffffff7f,
+  0 -0.1em 0 #722257 inset,
+  -0.1em -0.2em 0 #ffffff7f inset;
 }
+
 input[type=radio]:checked + span {
   opacity: 1;
 }
+
 input[type=radio]:focus {
   outline: transparent;
 }
+
 input[type=radio] + span {
   opacity: 0.65;
   transition: opacity var(--transDur) ease-in-out;
@@ -201,70 +212,65 @@ input[type=radio] + span {
     --fg: #e3e4e8;
   }
   label:first-child input[type=radio] {
-    box-shadow:
-      0.1em 0 0 #2726267f inset,
-      -0.1em 0 0 #27262600 inset,
-      0 0.1em 0 #afa490 inset,
-      0 -0.1em 0 #0000001f,
-      0 0.2em 0.5em #0000007f,
-      0 -0.1em 0 #926086 inset,
-      -0.1em -0.2em 0 #ffffff7f inset,
-      0.2em 0 0 #ffffff7f inset;
+    box-shadow: 0.1em 0 0 #2726267f inset,
+    -0.1em 0 0 #27262600 inset,
+    0 0.1em 0 #afa490 inset,
+    0 -0.1em 0 #0000001f,
+    0 0.2em 0.5em #0000007f,
+    0 -0.1em 0 #926086 inset,
+    -0.1em -0.2em 0 #ffffff7f inset,
+    0.2em 0 0 #ffffff7f inset;
   }
   label:last-child input[type=radio] {
-    box-shadow:
-      0 -0.1em 0 #926086 inset,
-      0.1em 0 0 #2726267f inset,
-      -0.1em 0 0 #2726267f inset,
-      0 0.1em 0 #afa490 inset,
-      -0.1em 0 0 #afa490 inset,
-      0 -0.1em 0 #0000001f,
-      0 0.2em 0.5em #0000007f,
-      -0.1em -0.1em 0 0.1em #ffffff7f inset;
+    box-shadow: 0 -0.1em 0 #926086 inset,
+    0.1em 0 0 #2726267f inset,
+    -0.1em 0 0 #2726267f inset,
+    0 0.1em 0 #afa490 inset,
+    -0.1em 0 0 #afa490 inset,
+    0 -0.1em 0 #0000001f,
+    0 0.2em 0.5em #0000007f,
+    -0.1em -0.1em 0 0.1em #ffffff7f inset;
   }
   label:first-child input[type=radio]:checked {
-    box-shadow:
-      0.1em 0 0 #272626af inset,
-      -0.1em 0 0 #272626 inset,
-      0 0.1em 0 #847a62 inset,
-      0 -0.1em 0 #0000007f,
-      0 0.1em 0 #0000007f,
-      0 -0.1em 0 #722257 inset,
-      -0.1em -0.2em 0 #ffffff7f inset,
-      0.2em 0 0 #ffffff7f inset
+    box-shadow: 0.1em 0 0 #272626af inset,
+    -0.1em 0 0 #272626 inset,
+    0 0.1em 0 #847a62 inset,
+    0 -0.1em 0 #0000007f,
+    0 0.1em 0 #0000007f,
+    0 -0.1em 0 #722257 inset,
+    -0.1em -0.2em 0 #ffffff7f inset,
+    0.2em 0 0 #ffffff7f inset
   }
   label:last-child input[type=radio]:checked {
-    box-shadow:
-      0.1em 0 0 #272626af inset,
-      -0.1em 0 0 #272626 inset,
-      0 -0.1em 0 #722257 inset,
-      0 0.1em 0 #847a62 inset,
-      -0.1em 0 0 #847a62 inset,
-      0 -0.1em 0 #0000001f,
-      0 0.1em 0 #0000007f,
-      -0.1em -0.1em 0 0.1em #ffffff7f inset;
+    box-shadow: 0.1em 0 0 #272626af inset,
+    -0.1em 0 0 #272626 inset,
+    0 -0.1em 0 #722257 inset,
+    0 0.1em 0 #847a62 inset,
+    -0.1em 0 0 #847a62 inset,
+    0 -0.1em 0 #0000001f,
+    0 0.1em 0 #0000007f,
+    -0.1em -0.1em 0 0.1em #ffffff7f inset;
   }
   input[type=radio] {
-    box-shadow:
-      0.1em 0 0 #2726267f inset,
-      -0.1em 0 0 #27262600 inset,
-      0 0.1em 0 #afa490 inset,
-      0 -0.1em 0 #0000001f,
-      0 0.2em 0.5em #0000007f,
-      0 -0.1em 0 #926086 inset,
-      -0.1em -0.2em 0 #ffffff7f inset;
+    box-shadow: 0.1em 0 0 #2726267f inset,
+    -0.1em 0 0 #27262600 inset,
+    0 0.1em 0 #afa490 inset,
+    0 -0.1em 0 #0000001f,
+    0 0.2em 0.5em #0000007f,
+    0 -0.1em 0 #926086 inset,
+    -0.1em -0.2em 0 #ffffff7f inset;
   }
   input[type=radio]:checked {
-    box-shadow:
-      0.1em 0 0 #272626af inset,
-      -0.1em 0 0 #272626af inset,
-      0 0.1em 0 #847a62 inset,
-      0 -0.1em 0 #0000007f,
-      0 0.1em 0 #0000007f,
-      0 -0.1em 0 #722257 inset,
-      -0.1em -0.2em 0 #ffffff7f inset;
+    box-shadow: 0.1em 0 0 #272626af inset,
+    -0.1em 0 0 #272626af inset,
+    0 0.1em 0 #847a62 inset,
+    0 -0.1em 0 #0000007f,
+    0 0.1em 0 #0000007f,
+    0 -0.1em 0 #722257 inset,
+    -0.1em -0.2em 0 #ffffff7f inset;
   }
 }
+
 select {
   width: 80%;
   margin-left: auto;
@@ -275,19 +281,18 @@ select {
   background-size: 30%;
   background-repeat: no-repeat;
   background-position: right;
-  background-image: linear-gradient(#ffffff 33%,#414751 58%,#837b52,#c5baa1,#c3adaa);
+  background-image: linear-gradient(#ffffff 33%, #414751 58%, #837b52, #c5baa1, #c3adaa);
   background-color: #dcdcdc;
   border-radius: 0.5em 0.5em 0.5em 0.5em;
   border: none;
   padding-left: 10px;
-  box-shadow:
-    0.1em 0 0 #2726267f inset,
-    -0.1em 0 0 #27262600 inset,
-    0 0.1em 0 #afa490 inset,
-    0 -0.1em 0 #ffffff3f,
-    0 0.2em 0.5em #0000007f,
-    0 -0.1em 0 #926086 inset,
-    -0.1em -0.2em 0 #ffffff7f inset;
+  box-shadow: 0.1em 0 0 #2726267f inset,
+  -0.1em 0 0 #27262600 inset,
+  0 0.1em 0 #afa490 inset,
+  0 -0.1em 0 #ffffff3f,
+  0 0.2em 0.5em #0000007f,
+  0 -0.1em 0 #926086 inset,
+  -0.1em -0.2em 0 #ffffff7f inset;
   cursor: pointer;
   display: block;
   padding-top: 0.2em;
@@ -321,31 +326,30 @@ button {
 
 button:active {
   background: #AAA;
-  background: radial-gradient(circle,rgba(170, 170, 170, 1) 0%, rgba(204, 204, 204, 1) 50%, rgba(238, 238, 238, 1) 100%);
-  box-shadow:
-    0.1em 0 0 #272626af inset,
-    -0.1em 0 0 #272626 inset,
-    0 0.1em 0 #847a62 inset,
-    0 -0.1em 0 #ffffff3f,
-    0 0.1em 0 #ffffff7f,
-    0 -0.1em 0 #722257 inset,
-    -0.1em -0.2em 0 #ffffff7f inset;
-  padding-top: 3px;
-  padding-left: 3px;
-
+  background: radial-gradient(circle, rgba(170, 170, 170, 1) 0%, rgba(204, 204, 204, 1) 50%, rgba(238, 238, 238, 1) 100%);
+  box-shadow: 0.1em 0 0 #272626af inset,
+  -0.1em 0 0 #272626 inset,
+  0 0.1em 0 #847a62 inset,
+  0 -0.1em 0 #ffffff3f,
+  0 0.1em 0 #ffffff7f,
+  0 -0.1em 0 #722257 inset,
+  -0.1em -0.2em 0 #ffffff7f inset;
+   &:not(:disabled) {
+    padding-top: 3px;
+    padding-left: 3px;
+  }
 }
 
 button:disabled {
   background: #AAA;
-  background: radial-gradient(circle,rgba(170, 170, 170, 1) 0%, rgba(204, 204, 204, 1) 50%, rgba(238, 238, 238, 1) 100%);
-  box-shadow:
-    0.1em 0 0 #272626af inset,
-    -0.1em 0 0 #272626 inset,
-    0 0.1em 0 #847a62 inset,
-    0 -0.1em 0 #ffffff3f,
-    0 0.1em 0 #ffffff7f,
-    0 -0.1em 0 #722257 inset,
-    -0.1em -0.2em 0 #ffffff7f inset;
+  background: radial-gradient(circle, rgba(170, 170, 170, 1) 0%, rgba(204, 204, 204, 1) 50%, rgba(238, 238, 238, 1) 100%);
+  box-shadow: 0.1em 0 0 #272626af inset,
+  -0.1em 0 0 #272626 inset,
+  0 0.1em 0 #847a62 inset,
+  0 -0.1em 0 #ffffff3f,
+  0 0.1em 0 #ffffff7f,
+  0 -0.1em 0 #722257 inset,
+  -0.1em -0.2em 0 #ffffff7f inset;
 }
 
 
