--- a/client/src/app/app.html
+++ b/client/src/app/app.html
@@ -1,4 +1,4 @@
 <div class="options">
-  <app-options (synthType)="synthType($event)"></app-options>
+  <app-options (synthType)="synthType($event)" (selectedFile)="applySettingsFromFile($event)"></app-options>
 </div>
 <router-outlet />
