--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -1,7 +1,11 @@
 div.options {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+ justify-content: center;
   > div {
-    width: 100%;
-    height: 100%;
     text-align: center;
     > h2:last-of-type {
       margin-top: 30px;
