--- a/client/src/app/synth/synth-component.html
+++ b/client/src/app/synth/synth-component.html
@@ -51,7 +51,7 @@
                 [numberOfOscillators]="numberOfOscillators"
                 (output)="setPhasorOutputTarget($event)">
     </app-phasor>
-    <app-general (saveConfig)="saveConfig($event)" #general></app-general>
+    <app-general #general></app-general>
   </div>
 </div>
 
