--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -27,3 +27,13 @@ div.options {
   max-width: 480px;
   z-index: -1;
 }
+
+button.load-config {
+  width: 200px;
+}
+
+button.delete-config {
+  margin-top: 40px;
+  background: #f35e5e;
+  width: 200px;
+}
